refactoring code - csrf

--- a/CSRF-samesite/views/evil.ejs
+++ b/CSRF-samesite/views/evil.ejs
@@ -53,19 +53,21 @@
 			</div>
 		</div><!--/.row-->
 
-      <div class="row">
-        <div class="col-lg-12">
-            <div class="panel panel-default">
-                <div class="panel-heading">Cross site request forgery</div>
-                <div class="panel-body">
-                    <div class="col-md-6">
-                    <p>Welcome to my evil webpage, you have been hacked!</p>
-                       </div>
-                    </form>
-                </div>
-            </div>
-        </div><!-- /.col-->
-    </div><!-- /.row -->
+    <div class="row">
+			<div class="col-lg-12">
+				<div class="panel panel-default">
+					<div class="panel-heading">Cross site request forgery</div>
+					<div class="panel-body">
+						<div class="col-md-6">
+						<p>Welcome to my evil webpage, you have been hacked!</p>
+						<p><a href="http://localhost:5000/update?color=Hackzord%21">Try with GET method</a></p>
+               			</div>
+						</form>
+					</div>
+				</div>
+			</div><!-- /.col-->
+		</div><!-- /.row -->
+
 
         <p style="font-size:20px;">
 
