--- a/CSRF-samesite/views/index.ejs
+++ b/CSRF-samesite/views/index.ejs
@@ -60,10 +60,10 @@
 		<div class="row">
 			<div class="col-lg-12">
 				<div class="panel panel-default">
-					<div class="panel-heading">CSRF!</div>
+					<div class="panel-heading">CSRF - Login Insecure</div>
 					<div class="panel-body">
 						<div class="col-md-6">
-							<form method="post" action="/login">
+							<form method="post" action="/login_insecure">
 							<input type="text" class="form-control" name="username" placeholder="username"/><br/>
                 			<input type="password" class="form-control" name="password" placeholder="password"/><br/>
                			    <button class="btn btn-primary" type="submit">Submit Button</button>
@@ -73,14 +73,41 @@
 				</div>
 			</div><!-- /.col-->
 		</div><!-- /.row -->
-		
-	
-     <center>
-        <p style="font-size:2em;">  
-		    <!-- content -->
-		  </p>
-      </center>
 
+		<div class="row">
+			<div class="col-lg-12">
+				<div class="panel panel-default">
+					<div class="panel-heading">CSRF - Login Secure</div>
+					<div class="panel-body">
+						<div class="col-md-6">
+							<form method="post" action="/login_strict">
+							<input type="text" class="form-control" name="username" placeholder="username"/><br/>
+                			<input type="password" class="form-control" name="password" placeholder="password"/><br/>
+               			    <button class="btn btn-primary" type="submit">Submit Button</button>
+               			</div>
+						</form>
+					</div>
+				</div>
+			</div><!-- /.col-->
+		</div><!-- /.row -->
+
+		<div class="row">
+			<div class="col-lg-12">
+				<div class="panel panel-default">
+					<div class="panel-heading">CSRF - Login Still Insecure</div>
+					<div class="panel-body">
+						<div class="col-md-6">
+							<form method="post" action="/login_lax">
+							<input type="text" class="form-control" name="username" placeholder="username"/><br/>
+                			<input type="password" class="form-control" name="password" placeholder="password"/><br/>
+               			    <button class="btn btn-primary" type="submit">Submit Button</button>
+               			</div>
+						</form>
+					</div>
+				</div>
+			</div><!-- /.col-->
+		</div><!-- /.row -->
+	
 	</div><!--/.main-->
 
 	<script src="/js/jquery-1.11.1.min.js"></script>
